--- a/index.html
+++ b/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles/new.css">
     <title>Happy New Year</title>
 </head>
+
 <body>
-    
+    <header class="header">
+        <div class="header-contain">
+            <h3 class="header-title">Happy New Year</h3>
+            <p class="header-discription">New Year Party <br> Celebration</p>
+        </div>
+    </header>
+
+    <main>
+        <section class="section">
+            <div class="section-contain">
+                <h1 class="section-head">65% OFF</h1>
+                <p class="section-discripton1">OUR HOLIDAY DEALS ARE BETTER</p>
+                <p class="section-discripton2">ALL CATEGORIES</p>
+                <img src="images/New Year Photo.png" alt="">
+            </div>
+        </section>
+        <section class="section">
+            <div>
+                <h3></h3>
+                <p></p>
+                <button></button>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
+
 </html>
