--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
 
     <main>
-        <section class="section">
+        <section class="first-section">
             <div class="section-contain">
                 <h1 class="section-head">65% OFF</h1>
                 <p class="section-discripton1">OUR HOLIDAY DEALS ARE BETTER</p>
@@ -33,11 +33,51 @@
                 <img src="images/New Year Photo.png" alt="">
             </div>
         </section>
-        <section class="section">
+        <section class="second-section">
+            <img class="second-section-img" src="images/Group 70.png" alt="">
+            <div class="second-section-container">
+                <h3 class="section-title">Welcome to <br> midnight party</h3>
+                <p class="sec-dis">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
+                    malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <p class="join">Join Now</p>
+            </div>
+        </section>
+        <section class="third-section">
+            <div class="third-section-contain">
+                <p><span>Place:</span> New Park Hotel</p>
+                <p><span>Date:</span> 31 December Night 2023</p>
+                <p><span>Time:</span> Evening 7.30 pm to 12.30 am</p>
+            </div>
+            <button>Join Now</button>
+        </section>
+        <section class="fourth-section">
+            <div class="fourth-section-cotainer-01">
+                <h3>NEW BEST OFFER</h3>
+                <h1>Coming Soon</h1>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                    sodales risus ut pellentesque vel euismod. </p>
+            </div>
+            <div class="fourth-section-cotainer-02">
+                <img src="images/Ellipse 1.png" alt="">
+            </div>
+            <div class="fourth-section-cotainer-03">
+                <h1>2024</h1>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                <img src="images/Group 96.png" alt="">
+            </div>
+        </section>
+        <section class="fifth-section">
+            <div class="fifth-section-banner">
+                <h3 class="fifth-section-banner-s-title">WHAT IS FUNCTIONAL</h3>
+                <h1 class="fifth-section-banner-b-title"><span>Holidays</span> Sale 50%</h1>
+                <p class="fifth-section-banner-dis">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id
+                    fermentum amet amet sit consectetur.</p>
+            </div>
             <div>
-                <h3></h3>
-                <p></p>
-                <button></button>
+                <img class="fifth-section-img1" src="images/Group 75.png" alt="">
+                <img src="images/Group 44.png" alt="">
+                <img class="fifth-section-img2" src="images/Rectangle 1.png" alt="">
             </div>
         </section>
     </main>
