--- a/index.html
+++ b/index.html
@@ -74,10 +74,30 @@
                     molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id
                     fermentum amet amet sit consectetur.</p>
             </div>
-            <div>
+            <div class="fifth-section-img">
                 <img class="fifth-section-img1" src="images/Group 75.png" alt="">
-                <img src="images/Group 44.png" alt="">
-                <img class="fifth-section-img2" src="images/Rectangle 1.png" alt="">
+                <img class="fifth-section-img2" src="images/Group 44.png" alt="">
+                <img class="fifth-section-img3" src="images/Rectangle 1.png" alt="">
+            </div>
+            <!-- <img src="images/Rectangle 2.png" alt=""> -->
+        </section>
+        <section class="sixth-section">
+            <div class="sixth-section-cotainer-01">
+                <h3>THE BEST GIFTS</h3>
+                <h1>Our Awesome Portfolio</h1>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+            <div>
+                <div>
+                    <img src="images/Rectangle 3.png" alt="">
+                    <img src="images/Rectangle 4.png" alt="">
+                    <img src="images/Rectangle 5.png" alt="">
+                </div>
+                <div>
+                    <img src="images/Rectangle 6.png" alt="">
+                    <img src="images/Rectangle 7.png" alt="">
+                    <img src="images/Rectangle 8.png" alt="">
+                </div>
             </div>
         </section>
     </main>
