--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <div class="second-section-container">
                 <h3 class="section-title">Welcome to <br> midnight party</h3>
                 <p class="sec-dis">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
-                    malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
-                <p class="join">Join Now</p>
+                malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <button class="join">Join Now</button>
             </div>
         </section>
         <section class="third-section">
@@ -85,25 +85,65 @@
             <div class="sixth-section-cotainer-01">
                 <h3>THE BEST GIFTS</h3>
                 <h1>Our Awesome Portfolio</h1>
-                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum
+                    sed
+                    sodales risus ut pellentesque vel euismod. </p>
             </div>
             <div>
-                <div>
+                <div class="sixth-section-img">
                     <img src="images/Rectangle 3.png" alt="">
-                    <img src="images/Rectangle 4.png" alt="">
+                    <img class="image-middle" src="images/Rectangle 4.png" alt="">
                     <img src="images/Rectangle 5.png" alt="">
                 </div>
-                <div>
+                <div class="sixth-section-img">
                     <img src="images/Rectangle 6.png" alt="">
-                    <img src="images/Rectangle 7.png" alt="">
+                    <img class="image-middle" src="images/Rectangle 7.png" alt="">
                     <img src="images/Rectangle 8.png" alt="">
                 </div>
+            </div>
+        </section>
+        <section class="seventh-section">
+            <img src="images/Group 61.png" alt="">
+            <h1 class="seventh-section-banner">Subscribe Newsletter</h1>
+            <p class="seventh-section-dis">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
+                malesuada.<br>Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <div class="seventh-section-input-btn">
+                <input type="email" placeholder="user@gamil.com">
+                <button type="submit">Subscribe</button>
             </div>
         </section>
     </main>
 
     <footer>
-
+        <section class="footer-section">
+            <div class="footer-section-banner-container-01">
+                <p>44, Big Building Roosevelt Street <br> Beach Gardens Florida 33410</p>
+                <div class="footer-section-banner">
+                    <div class="footer-section-banner-details">
+                    <img src="images/Call.png" alt="">
+                    <p>+00 123 584 124</p>
+                </div>
+                <div class="footer-section-banner-details">
+                    <img src="images/Website.png" alt="">
+                    <p>www.website.com</p>
+                </div>
+                </div>
+            </div>
+            <hr>
+            <div class="footer-section-icon">
+                <div>
+                    <img src="images/Facebook.png" alt="">
+                    <img src="images/Instagram.png" alt="">
+                    <img src="images/Twitter.png" alt="">
+                    <img src="images/Linkedin.png" alt="">
+                </div>
+            </div>
+            <hr> 
+            <div class="footer-foot">
+                <p>&copy;2017, All Rights Reserved.</p>
+                <p>Unsubscribe</p>
+            </div>
+        </section>
     </footer>
 </body>
 
