--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
             <img class="second-section-img" src="images/Group 70.png" alt="">
             <div class="second-section-container">
                 <h3 class="section-title">Welcome to <br> midnight party</h3>
-                <p class="sec-dis">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
-                malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <p class="sec-dis">"Embrace the possibilities of the New Year with open arms and a heart full of
+                    optimism. Cheers to new beginnings!"
+                </p>
                 <button class="join">Join Now</button>
             </div>
         </section>
@@ -54,15 +55,15 @@
             <div class="fourth-section-cotainer-01">
                 <h3>NEW BEST OFFER</h3>
                 <h1>Coming Soon</h1>
-                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
-                    sodales risus ut pellentesque vel euismod. </p>
+                <p>Celebrate the Lunar New Year with special variety programmers from around the world. Grab the the
+                    opertunity & celebrate the year with us. </p>
             </div>
             <div class="fourth-section-cotainer-02">
                 <img src="images/Ellipse 1.png" alt="">
             </div>
             <div class="fourth-section-cotainer-03">
                 <h1>2024</h1>
-                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                <p>New Year means new beginnings and we would love them all to be with you.</p>
                 <img src="images/Group 96.png" alt="">
             </div>
         </section>
@@ -70,9 +71,8 @@
             <div class="fifth-section-banner">
                 <h3 class="fifth-section-banner-s-title">WHAT IS FUNCTIONAL</h3>
                 <h1 class="fifth-section-banner-b-title"><span>Holidays</span> Sale 50%</h1>
-                <p class="fifth-section-banner-dis">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
-                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id
-                    fermentum amet amet sit consectetur.</p>
+                <p class="fifth-section-banner-dis">Buy now and get 50% off in nearly every department. Save on
+                    clothes,decor, toys and more. Grab the the opertunity & celebrate the year with us.</p>
             </div>
             <div class="fifth-section-img">
                 <img class="fifth-section-img1" src="images/Group 75.png" alt="">
@@ -85,9 +85,7 @@
             <div class="sixth-section-cotainer-01">
                 <h3>THE BEST GIFTS</h3>
                 <h1>Our Awesome Portfolio</h1>
-                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum
-                    sed
-                    sodales risus ut pellentesque vel euismod. </p>
+                <p>We are introducing our clothing brand to elevate your style with our chic, sustainable designs <br> for the modern fashion enthusiast. Quality meets sophistication."</p>
             </div>
             <div>
                 <div class="sixth-section-img">
@@ -105,8 +103,7 @@
         <section class="seventh-section">
             <img src="images/Group 61.png" alt="">
             <h1 class="seventh-section-banner">Subscribe Newsletter</h1>
-            <p class="seventh-section-dis">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
-                malesuada.<br>Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <p class="seventh-section-dis">"Stay updated with exclusive offers and latest trends! Subscribe to our newsletter for fashion inspiration, <br>style tips, and special promotions delivered straight to your inbox."</p>
             <div class="seventh-section-input-btn">
                 <input type="email" placeholder="user@gamil.com">
                 <button type="submit">Subscribe</button>
@@ -120,13 +117,13 @@
                 <p>44, Big Building Roosevelt Street <br> Beach Gardens Florida 33410</p>
                 <div class="footer-section-banner">
                     <div class="footer-section-banner-details">
-                    <img src="images/Call.png" alt="">
-                    <p>+00 123 584 124</p>
-                </div>
-                <div class="footer-section-banner-details">
-                    <img src="images/Website.png" alt="">
-                    <p>www.website.com</p>
-                </div>
+                        <img src="images/Call.png" alt="">
+                        <p>+00 123 584 124</p>
+                    </div>
+                    <div class="footer-section-banner-details">
+                        <img src="images/Website.png" alt="">
+                        <p>www.website.com</p>
+                    </div>
                 </div>
             </div>
             <hr>
@@ -138,7 +135,7 @@
                     <img src="images/Linkedin.png" alt="">
                 </div>
             </div>
-            <hr> 
+            <hr>
             <div class="footer-foot">
                 <p>&copy;2017, All Rights Reserved.</p>
                 <p>Unsubscribe</p>
