--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <section class="fourth-section">
             <div class="fourth-section-cotainer-01">
                 <h3>NEW BEST OFFER</h3>
-                <h1>Coming Soon</h1>
+                <h1 id="hh">Coming Soon</h1>
                 <p>Celebrate the Lunar New Year with special variety programmers from around the world. Grab the the
                     opertunity & celebrate the year with us. </p>
             </div>
@@ -118,7 +118,7 @@
                 <div class="footer-section-banner">
                     <div class="footer-section-banner-details">
                         <img src="images/Call.png" alt="">
-                        <p>+00 123 584 124</p>
+                        <p class="phone">+00 123 584 124</p>
                     </div>
                     <div class="footer-section-banner-details">
                         <img src="images/Website.png" alt="">
